Properly unexclude files under dev-lib in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -270,11 +270,12 @@ src.orig
 log.txt
 *.lnk
 *.lib
-!dev-lib/[^.]*
+*.dll
+!dev-lib/**
+/dev-lib/.*
 !doc/[^.]*
 .DS_Store
 *.exe
-*.dll
 *.tlog
 *.exp
 
