Update the VS2019 solution file with configurations that target Win10
Also update the .gitignore to ignore the new configuration build folders.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@
 
 # Build results
 [Dd]ebug/
+[Dd]ebug2019/
 [Dd]ebugPublic/
 [Rr]elease/
+[Rr]elease2019/
 [Rr]eleases/
 Debug[ _]NoAccel/
 Release[ _]NoAccel/
