Include resources in MinGW builds

--- a/src/res/UrQuanMasters.rc
+++ b/src/res/UrQuanMasters.rc
@@ -21,8 +21,8 @@ LANGUAGE 0x09, 0x01	// LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 1   VERSIONINFO
- FILEVERSION UQM_MAJOR_VERSION,UQM_MINOR_VERSION,UQM_PATCH_VERSION,0
- PRODUCTVERSION UQM_MAJOR_VERSION,UQM_MINOR_VERSION,UQM_PATCH_VERSION,0
+ FILEVERSION UQM_MAJOR_VERSION,UQM_MINOR_VERSION,UQM_PATCH_VERSION,UQM_REVISION_VERSION
+ PRODUCTVERSION UQM_MAJOR_VERSION,UQM_MINOR_VERSION,UQM_PATCH_VERSION,UQM_REVISION_VERSION
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
