Ignore dist-packages and bundled macOS app directories

--- a/.gitignore
+++ b/.gitignore
@@ -286,5 +286,7 @@ log.txt
 config_unix.h
 config_win.h
 *.vcproj.*
+dist-packages
+The\ Ur-Quan\ Masters\ MegaMod.app
 
 build/msvs2008/UrQuanMasters\.vcproj\.DESKTOP-TCJIFU9\.seros\.user
