--- a/.gitignore
+++ b/.gitignore
@@ -258,11 +258,11 @@ paket-files/
 # Addons directory and miscellany
 config/*
 #bin/content/*
-#!content/version
 #!content/addons
 #content/addons/*
 #content/packages
 content/*
+!content/version
 build.vars
 config.state
 uqm-wrapper
