Setup Menu scroll improvements

--- a/.gitignore
+++ b/.gitignore
@@ -291,3 +291,7 @@ The\ Ur-Quan\ Masters\ MegaMod.app
 uqmanimationtool.conf
 
 build/msvs2008/UrQuanMasters\.vcproj\.DESKTOP-TCJIFU9\.seros\.user
+/A_question_from_megamod_team.txt
+/TODO.txt
+/TODO.txt.bak
+/ToSend 1.txt.bak
