--- a/src/config_win.h.in
+++ b/src/config_win.h.in
@@ -26,6 +26,9 @@
 /* Directory where save games will be stored */
 #define SAVEDIR "%UQM_CONFIG_DIR%/save/"
 
+/* Directory where screenshots will be stored */
+#define SCRSHOTDIR "%UQM_CONFIG_DIR%/screenshots/"
+
 /* Defined if words are stored with the most significant byte first */
 @WORDS_BIGENDIAN@
 
