--- a/src/res/UrQuanMasters.rc
+++ b/src/res/UrQuanMasters.rc
@@ -37,8 +37,8 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "Comments", "See http://megamod.serosis.net\0"
-            VALUE "CompanyName", "megamod.serosis.net\0"
+            VALUE "Comments", "See https://uqm-mods.sourceforge.net\0"
+            VALUE "CompanyName", "uqm-mods.sourceforge.net\0"
             VALUE "FileDescription", "The Ur-Quan Masters MegaMod main executable\0"
             VALUE "FileVersion", UQM_STRING_VERSION "\0"
             VALUE "InternalName", "UrQuanMasters\0"
