--- a/src/res/megamod.desktop
+++ b/src/res/megamod.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Version=0.8.1
-Name=The Ur-Quan Masters MegaMod
+Version=1.0
+Name=The Ur-Quan Masters HD MegaMod
 Comment=An interstellar adventure game
 Exec=UrQuanMasters
-Icon=UrQuanMasters
+Icon=net.sourceforge.uqm_mods.UQM-MegaMod
 StartupNotify=true
 Terminal=false
 Type=Application
