--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,6 @@ ipch/
 *.ncb
 *.opendb
 *.opensdf
-*.sdf
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
@@ -290,5 +289,7 @@ dist-packages
 The\ Ur-Quan\ Masters\ MegaMod.app
 uqmanimationtool.conf
 *.uqm
+UrQuanMasters
+UrQuanMastersDebug
 
 build/msvs2008/UrQuanMasters\.vcproj\.DESKTOP-TCJIFU9\.seros\.user
