Create a CMakeLists.txt based on the build.sh build system
It's not 100% complete as it only verifiable builds for Windows and Linux

Tests will need to be done to see if it can build on ARM-based systems and MacOS (But I do not personally have the hardware to test this)

--- a/.gitignore
+++ b/.gitignore
@@ -291,5 +291,8 @@ uqmanimationtool.conf
 *.uqm
 UrQuanMasters
 UrQuanMastersDebug
+cmake-debug
+cmake-release
+cmake-build
 
 build/msvs2008/UrQuanMasters\.vcproj\.DESKTOP-TCJIFU9\.seros\.user
