Exclude ImGui entirely from SDL1 builds

--- a/build.vars.in
+++ b/build.vars.in
@@ -50,6 +50,7 @@ uqm_USE_INTERNAL_LUA='@USE_INTERNAL_LUA@'
 uqm_HAVE_GETOPT_LONG='@HAVE_GETOPT_LONG@'
 uqm_HAVE_REGEX='@HAVE_REGEX_H_FLAG@'
 uqm_GFXMODULE='@GFXMODULE@'
+uqm_SDL_VERSION='@SDL_VERSION@'
 uqm_HAVE_OPENGL='@HAVE_OPENGL@'
 uqm_USE_ZIP_IO='@USE_ZIP_IO@'
 uqm_USE_PLATFORM_ACCEL='@USE_PLATFORM_ACCEL@'
@@ -64,6 +65,6 @@ export MACRO_WIN32 MACRO___MINGW32__
 export uqm_SOUNDMODULE uqm_OGGVORBIS uqm_USE_INTERNAL_MIKMOD
 export uqm_USE_INTERNAL_LUA
 export uqm_HAVE_GETOPT_LONG uqm_HAVE_REGEX uqm_USE_WINSOCK uqm_GFXMODULE
-export uqm_HAVE_OPENGL
+export uqm_HAVE_OPENGL uqm_SDL_VERSION
 export uqm_USE_ZIP_IO uqm_USE_PLATFORM_ACCEL uqm_THREADLIB uqm_NETPLAY
 
