add "thirdparty" to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -294,5 +294,6 @@ UrQuanMastersDebug
 cmake-debug
 cmake-release
 cmake-build
+thirdparty
 
 build/msvs2008/UrQuanMasters\.vcproj\.DESKTOP-TCJIFU9\.seros\.user
